--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server":"json-server --watch src/data/jobsData.json --port 5000"
-
+    "server": "json-server --watch src/data/jobsData.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "json-server": "^1.0.0-beta.3",
     "primeicons": "^7.0.0",
     "vue": "^3.5.13",
